@@ -22,7 +22,7 @@
             }
 
             div.buttons div.contents div {
-                margin-right: 5px;
+                margin: 2.5px;
             }
 
             div.buttons h2 {
@@ -99,6 +99,8 @@
                 <div class="ib-quote"></div>
                 <div class="ib-speech-mark"></div>
                 <div class="ib-not"></div>
+                <div class="ib-back-slash"></div>
+                <div class="ib-forward-slash"></div>
             </div>
         </div>
 
