@@ -69,6 +69,8 @@
 @import "scss/characters/quote";
 @import "scss/characters/speech-mark";
 @import "scss/characters/not";
+@import "scss/characters/back-slash";
+@import "scss/characters/forward-slash";
 
 
 /*
